# CppProjects

./: README.md
1_FileManager/: CMakeLists.txt  audio.cpp  audio.hpp  document.cpp  document.hpp  file.cpp  file.hpp  fileManager.cpp  fileManager.hpp  image.cpp  image.hpp  main.cpp  video.cpp  video.hpp
2_SandboxLogger/: CMakeLists.txt  Makefile  log.txt  logger.cpp  logger.h  main.cpp  monitor.cpp  monitor.h
3_TerrainGenerator_diamondsquare/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  command_line_parser.cpp  command_line_parser.hpp  generator.cpp  heightmap.cpp  heightmap.hpp  normalmap.cpp  normalmap.hpp  presenter.cpp  splatmap.cpp  splatmap.hpp
3_TerrainGenerator_diamondsquare/shaders/: Makefile  cmake_install.cmake
3_TerrainGenerator_diamondsquare/shaders/glsl/: background.frag
4_recursiveTemplates/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fibonacci.h  main.cpp  primes.h  recursivetemplates
